@@ -4,7 +4,6 @@ import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.gui.widget.EnumSelectorWidget;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.MapIngredientTypeManager;
 import com.gregtechceu.gtceu.common.data.GTRecipeTypes;
 import com.gregtechceu.gtceu.utils.ItemStackHashStrategy;
 
@@ -18,7 +17,7 @@ import net.minecraft.world.item.ItemStack;
 
 import it.unimi.dsi.fastutil.objects.Object2IntOpenCustomHashMap;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.function.Consumer;
 
 public class SmartItemFilter implements ItemFilter {
@@ -89,10 +88,11 @@ public class SmartItemFilter implements ItemFilter {
 
     private int lookup(ItemStack itemStack) {
         ItemStack copy = itemStack.copyWithCount(Integer.MAX_VALUE);
-        var ingredients = MapIngredientTypeManager.getFrom(copy, ItemRecipeCapability.CAP);
-        var recipe = filterMode.recipeType.getLookup().recurseIngredientTreeFindRecipe(List.of(ingredients),
-                filterMode.recipeType.getLookup().getLookup(), r -> true);
-        if (recipe == null) return 0;
+        var recipe = filterMode.recipeType.db()
+                .find(Collections.singletonMap(ItemRecipeCapability.CAP, Collections.singletonList(copy)), r -> true);
+        if (recipe == null) {
+            return 0;
+        }
         for (Content content : recipe.getInputContents(ItemRecipeCapability.CAP)) {
             var stacks = ItemRecipeCapability.CAP.of(content.getContent()).getItems();
             for (var stack : stacks) {
